--- a/components/ui/caed-about-us/CaedAboutUs.css
+++ b/components/ui/caed-about-us/CaedAboutUs.css
@@ -1,26 +1,27 @@
 /* /components/ui/card-about-us/CardAboutUs.css */
 
 .card-inner {
-    transform-style: preserve-3d;
-    transition: transform 0.7s;
-    perspective: 1000px;
+  transform-style: preserve-3d;
+  transition: transform 0.7s;
+  perspective: 1000px;
 }
 
 .card:hover .card-inner {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .backface-hidden {
-    backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-.card-front, .card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
 }
 
 .card-back {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
