--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
   }
 }
 
-/* Spinner */ 
+/* Spinner */
 /* .spinner {
   width: 44px;
   height: 44px;
@@ -90,8 +90,9 @@ body {
   }
  } */
 
-/* Skeleton */ 
-.loaderRegister {/* Igual al tamaño máximo del formulario */
+/* Skeleton */
+.loaderRegister {
+  /* Igual al tamaño máximo del formulario */
   height: 486px;
 }
 
@@ -111,13 +112,20 @@ body {
 }
 
 .loader:after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background: linear-gradient(110deg, rgba(227, 227, 227, 0) 0%, rgba(227, 227, 227, 0) 40%, rgba(227, 227, 227, 0.5) 50%, rgba(227, 227, 227, 0) 60%, rgba(227, 227, 227, 0) 100%);
+  background: linear-gradient(
+    110deg,
+    rgba(227, 227, 227, 0) 0%,
+    rgba(227, 227, 227, 0) 40%,
+    rgba(227, 227, 227, 0.5) 50%,
+    rgba(227, 227, 227, 0) 60%,
+    rgba(227, 227, 227, 0) 100%
+  );
   animation: gradient-animation 1.2s linear infinite;
 }
 
@@ -129,7 +137,12 @@ body {
   justify-content: space-around;
 }
 
-.loader .line-1, .line-2, .line-3, .line-4, .line-5, .line-6 {
+.loader .line-1,
+.line-2,
+.line-3,
+.line-4,
+.line-5,
+.line-6 {
   background-color: #cacaca;
   border-radius: 0.375rem; /* Bordes redondeados */
 }
