Cambios en la visualización en el modo tablet
se cambio el como se ve la nav bar en el modo de tablets centrando el logo moviendo el menú a la izquierda y agregando un botón de inicio de sesión a la derecha

--- a/components/ui/top-menu/switchStyle.module.css
+++ b/components/ui/top-menu/switchStyle.module.css
@@ -1,6 +1,6 @@
 /* Common styles for both themes */
 .switch {
-  font-size: 14px;
+  font-size: 13px;
   position: relative;
   display: inline-block;
   width: 3.5em;
@@ -43,7 +43,7 @@
 .sliderLight:before {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-  box-shadow: inset 8px -4px 0px 0px #fff000;
+  box-shadow: inset 8px -4px 0px 0px #ffee00;
 }
 
 /* Dark Mode */
@@ -52,7 +52,7 @@
 }
 
 .sliderDark:before {
-  background: #ffffff;
-  box-shadow: inset 15px -4px 0px 15px #fff000;
+  background: #ffee00dc;
+  box-shadow: inset 15px -4px 0px 15px #ffee00;
   transform: translateX(100%);
 }
