--- a/components/ui/top-menu/switchStyle.module.css
+++ b/components/ui/top-menu/switchStyle.module.css
@@ -13,7 +13,8 @@
   height: 0;
 }
 
-.sliderLight, .sliderDark {
+.sliderLight,
+.sliderDark {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -24,7 +25,8 @@
   border-radius: 30px;
 }
 
-.sliderLight:before, .sliderDark:before {
+.sliderLight:before,
+.sliderDark:before {
   position: absolute;
   content: '';
   height: 1.4em;
