--- a/components/ui/top-menu/switchStyle.module.css
+++ b/components/ui/top-menu/switchStyle.module.css
@@ -40,17 +40,17 @@
 /* Light Mode */
 .sliderLight {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(37 37 38 / var(--tw-bg-opacity));
 }
 
 .sliderLight:before {
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(37 37 38 / var(--tw-bg-opacity));
   box-shadow: inset 8px -4px 0px 0px #ffee00;
 }
 
 /* Dark Mode */
 .sliderDark {
-  background-color: #ffffff;
+  background-color: #ebe7e0;
 }
 
 .sliderDark:before {
