--- a/app/globals.css
+++ b/app/globals.css
@@ -54,17 +54,16 @@ body {
   bottom: 0;
   clip-path: inset(0 0 -10% 0); /* Ajusta este valor si es necesario } */
 
-
 /* Caja */
 .box {
-  @apply w-full absolute rounded-full;
+  @apply absolute w-full rounded-full;
   animation: spin 30s infinite linear;
 }
 
 #bannerHTUButton {
   border: none;
   width: 200px;
-  margin:auto;
+  margin: auto;
   background-color: #012d8a;
   color: #ffffff;
   padding-left: 20px;
@@ -77,52 +76,91 @@ body {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .ball {
-  @apply absolute w-[130px] h-[130px] rounded-full blur-[5em];
+  @apply absolute h-[130px] w-[130px] rounded-full blur-[5em];
 }
 
-.ball1 { background-color: rgba(42, 41, 120, 0.601); top: 10%; left: 25%; }
-.ball2 { background-color: rgba(42, 41, 120, 0.601); top: 10%; right: 10%; }
-.ball3 { background-color: rgba(42, 41, 120, 0.601); bottom: 10%; left: 50%; }
-.ball4 { background-color: rgba(42, 41, 120, 0.601); bottom: 0; left: 10%; }
-.ball5 { background-color: rgba(42, 41, 120, 0.601); bottom: 50%; right: 15%; }
-
-
+.ball1 {
+  background-color: rgba(42, 41, 120, 0.601);
+  top: 10%;
+  left: 25%;
+}
+.ball2 {
+  background-color: rgba(42, 41, 120, 0.601);
+  top: 10%;
+  right: 10%;
+}
+.ball3 {
+  background-color: rgba(42, 41, 120, 0.601);
+  bottom: 10%;
+  left: 50%;
+}
+.ball4 {
+  background-color: rgba(42, 41, 120, 0.601);
+  bottom: 0;
+  left: 10%;
+}
+.ball5 {
+  background-color: rgba(42, 41, 120, 0.601);
+  bottom: 50%;
+  right: 15%;
+}
 
 @media (max-width: 640px) {
   .container-blur {
-    @apply w-full h-[200vh] overflow-hidden flex justify-center relative left-0;
+    @apply relative left-0 flex h-[200vh] w-full justify-center overflow-hidden;
     position: absolute;
-    
+
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    clip-path: inset(0 0 -5% 0); 
+    clip-path: inset(0 0 -5% 0);
   }
   .box {
-    @apply w-full h-[90%] absolute rounded-full;
+    @apply absolute h-[90%] w-full rounded-full;
     animation: spin 30s infinite linear;
-    bottom: 0; 
-     }
-
-  .ball {
-    @apply absolute w-[110px] h-[110px] rounded-full blur-[5em];
+    bottom: 0;
   }
 
-  .ball1 { background-color: rgba(42, 41, 120, 0.601); top: 30%; left: 20%; }
-  .ball2 { background-color: rgba(42, 41, 120, 0.601); top: 35%; right: 15%; }
-  .ball3 { background-color: rgba(42, 41, 120, 0.601); bottom: 25%; left: 50%; }
-  .ball4 { background-color: rgba(42, 41, 120, 0.601); bottom: 10%; left: 15%; }
-  .ball5 { background-color: rgba(42, 41, 120, 0.601); bottom: 30%; right: 10%; }
+  .ball {
+    @apply absolute h-[110px] w-[110px] rounded-full blur-[5em];
+  }
+
+  .ball1 {
+    background-color: rgba(42, 41, 120, 0.601);
+    top: 30%;
+    left: 20%;
+  }
+  .ball2 {
+    background-color: rgba(42, 41, 120, 0.601);
+    top: 35%;
+    right: 15%;
+  }
+  .ball3 {
+    background-color: rgba(42, 41, 120, 0.601);
+    bottom: 25%;
+    left: 50%;
+  }
+  .ball4 {
+    background-color: rgba(42, 41, 120, 0.601);
+    bottom: 10%;
+    left: 15%;
+  }
+  .ball5 {
+    background-color: rgba(42, 41, 120, 0.601);
+    bottom: 30%;
+    right: 10%;
+  }
 }
-
-
-
 
 /* Spinner */
 /* .spinner {
