--- a/app/globals.css
+++ b/app/globals.css
@@ -357,6 +357,13 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* Estilos del scrollbar usando variables definidas en el body */
+ul.scrollable-list {
+  margin-top: 5px;
+  clip-path: inset(0 round 16px); /* Ajusta el valor según el borde redondeado */
+}
+ul.scrollable-list {
+  padding-right: 0.5rem; /* Ajusta según sea necesario */
+}
 ul.scrollable-list::-webkit-scrollbar {
   width: var(--sb-size);
 }
