--- a/components/ui/top-menu/log-register-bt/RegisterButton/registerButton.module.css
+++ b/components/ui/top-menu/log-register-bt/RegisterButton/registerButton.module.css
@@ -30,3 +30,13 @@
   height: 1000px;
   opacity: 1;
 }
+
+.buttonSecond{
+  outline: none;
+  box-shadow: 0px 0px 0px 0px #FFFFFF, 0px 0px 0px 0px #012c8a;
+  transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.buttonSecond:hover {
+  box-shadow: 0px 0px 0px 2px #FFFFFF, 0px 0px 0px 4px #91aeec;
+}
