--- a/components/ui/top-menu/log-register-bt/LogInButton/logInButtonAnimation.module.css
+++ b/components/ui/top-menu/log-register-bt/LogInButton/logInButtonAnimation.module.css
@@ -1,28 +1,23 @@
 .buttonLight {
   cursor: pointer;
+  background-color: transparent;
+  transition: all 0.2s cubic-bezier(0.23, 1, 0.320, 1);
   overflow: hidden;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.buttonLight span:last-child {
+.buttonLight::before {
+  content: '';
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 20px;
-  height: 20px;
-  background-color: #91aeec;
-  opacity: 0;
-  transition: all 2s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-.buttonLight span:first-child {
-  position: relative;
-  z-index: 1;
-}
-
-.buttonLight:hover span:last-child {
-  width: 250px;
+  inset: 0;
+  margin: auto;
   height: 1000px;
-  opacity: 1;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color: #91aeec;
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttonLight:hover::before {
+  scale: 1;
 }
