agregando popup al paypal button

--- a/app/globals.css
+++ b/app/globals.css
@@ -396,3 +396,7 @@ ul.scrollable-list::-webkit-scrollbar-thumb {
 .buttonPay:hover {
   background-color: #6098ff;
 }
+
+.paypal-button-tagline{
+  display: none!important;
+}
