--- a/components/ui/top-menu/log-register-bt/LogInButton/logInButtonAnimation.module.css
+++ b/components/ui/top-menu/log-register-bt/LogInButton/logInButtonAnimation.module.css
@@ -1,7 +1,7 @@
 .buttonLight {
   cursor: pointer;
   background-color: transparent;
-  transition: all 0.2s cubic-bezier(0.23, 1, 0.320, 1);
+  transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1);
   overflow: hidden;
 }
 
@@ -18,6 +18,6 @@
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.buttonLight:hover::before {
+.buttonLight:hover:before {
   scale: 1;
 }
