--- a/components/ui/top-menu/log-register-bt/RegisterButton/registerButton.module.css
+++ b/components/ui/top-menu/log-register-bt/RegisterButton/registerButton.module.css
@@ -1,8 +1,5 @@
 .buttonSecond {
   outline: none;
-  box-shadow:
-    0px 0px 0px 0px #ffffff,
-    0px 0px 0px 0px #012c8a;
   transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
 }
 
@@ -10,4 +7,16 @@
   box-shadow:
     0px 0px 0px 2px #ffffff,
     0px 0px 0px 4px #91aeec;
+}
+
+
+.buttonSecondDark {
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.buttonSecondDark:hover {
+  box-shadow:
+    0px 0px 0px 2px #252526,
+    0px 0px 0px 4px #ebe7e0;
 }
