--- a/app/globals.css
+++ b/app/globals.css
@@ -401,20 +401,31 @@ ul.scrollable-list::-webkit-scrollbar-thumb {
   display: none !important;
 }
 
+/**Sweet Alert**/
 div:where(.swal2-container) div:where(.swal2-popup) {
   border-radius: 1rem !important;
 }
 
 div:where(.swal2-icon).swal2-info {
-  color: #012c8a !important;
-  border-color: #012c8a !important;
+  border-color: #facea8 !important;
+  color: #f8bb86 !important;
 }
 
-div:where(.swal2-icon).swal2-warning {
-  color: #012c8a !important;
-  border-color: #012c8a !important;
+/**Button Second**/
+.buttonSecond {
+  outline: none;
+  box-shadow:
+    0px 0px 0px 0px #ffffff,
+    0px 0px 0px 0px #012c8a;
+  transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
 }
 
-div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm) {
-  background-color: #012c8a !important;
+.buttonSecond:hover {
+  box-shadow:
+    0px 0px 0px 2px #ffffff,
+    0px 0px 0px 4px #91aeec;
+}
+
+div:where(.swal2-container).swal2-backdrop-show, div:where(.swal2-container).swal2-noanimation{
+  backdrop-filter: blur(5px);
 }
