--- a/app/globals.css
+++ b/app/globals.css
@@ -418,3 +418,28 @@ div:where(.swal2-icon).swal2-warning {
 div:where(.swal2-container) button:where(.swal2-styled):where(.swal2-confirm) {
   background-color: #012c8a !important;
 }
+
+/*  animaciones de los botones */
+
+.buttonSecond {
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.buttonSecond:hover {
+  box-shadow:
+    0px 0px 0px 2px #ffffff,
+    0px 0px 0px 4px #91aeec;
+}
+
+
+.buttonSecondDark {
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.buttonSecondDark:hover {
+  box-shadow:
+    0px 0px 0px 2px #252526,
+    0px 0px 0px 4px #ebe7e0;
+}
