--- a/components/ui/animations/swipehands.css
+++ b/components/ui/animations/swipehands.css
@@ -1,94 +1,20 @@
-
 .overlay {
   position: absolute;
   width: 90%;
   left: 5%;
-  border-radius: 10px;
   height: 30vh;
-  background-color: rgba(0, 0, 0, 0.5); 
   display: flex;
+  background-color: rgba(0, 0, 0, 0.466);
   justify-content: center;
   align-items: center;
-  z-index: 1000; 
+  z-index: 1000;
 }
-
 
 .swipe {
   position: relative;
 }
 
-
-.path {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  background: rgba(149, 147, 241, 0.5);
-  border-radius: 40px;
-  top: 28px;
-  left: 78px;
-  visibility: hidden;
-}
-
-
-.hand-icon {
-  position: relative;
-  background-image: url('../../../public/images/hand.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 100px;
-  height: 100px;
-  transform-origin: 52% 62%;
-}
-
-@keyframes swipe-hand {
-  25% {
-    transform: translate(20px) rotate(30deg);
-  }
-  50% {
-    transform: translate(-20px) rotate(-15deg);
-  }
-  100% {
-    transform: translate(0px) rotate(0);
-  }
-}
-
-@keyframes swipe-dot {
-  12% {
-    visibility: visible;
-    width: 40px;
-  }
-  25% {
-    visibility: visible;
-    transform: translate(-65px);
-    width: 20px;
-  }
-  26% {
-    visibility: hidden;
-  }
-}
-
-
-.touch-hand {
-  position: relative;
-  background-image: url('../../../public/images/hand.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 80px;
-  height: 80px;
-  transform-origin: 50% 80%;
-}
-
-
-@keyframes touch-gesture {
-  0%,
-  100% {
-    transform: translateY(0) scale(o.5);
-  }
-  50% {
-    transform: translateY(0.5px) scale(0.8); 
-  }
-}
-
-.touch-hand {
-  animation: touch-gesture 1.5s infinite;
+.gif-image {
+  opacity: 0.8;
+  border-radius: 10px;
 }
