--- a/components/ui/animations/swipehands.css
+++ b/components/ui/animations/swipehands.css
@@ -15,6 +15,18 @@
 }
 
 .gif-image {
-  opacity: 0.8;
+  opacity: 0; /* Inicialmente invisible */
   border-radius: 10px;
+  transition: opacity 0.5s ease-in-out; /* Aparece con una transición suave */
+}
+
+.gif-loaded { /* Clase que se agregará cuando el GIF esté cargado */
+  opacity: 0.8; /* Aparece el GIF cuando se cargue completamente */
+}
+
+@media (max-width: 768px) {
+  .overlay {
+    width: 100%;
+    left: 0;
+  }
 }
