--- a/components/ui/animations/swipehands.css
+++ b/components/ui/animations/swipehands.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 90%;
   left: 5%;
-  height: 30vh;
+  height: 100%;
   display: flex;
   background-color: rgba(0, 0, 0, 0.466);
   justify-content: center;
