cards de about us solucionado

--- a/components/ui/caed-about-us/CaedAboutUs.css
+++ b/components/ui/caed-about-us/CaedAboutUs.css
@@ -10,6 +10,10 @@
   transform: rotateY(180deg);
 }
 
+.card-active .card-inner{
+  transform: rotateY(180deg);
+}
+
 .backface-hidden {
   backface-visibility: hidden;
 }
