Correccion del diseño del link en tema oscuro

--- a/app/globals.css
+++ b/app/globals.css
@@ -110,6 +110,16 @@ body {
   transform: rotate(288deg) translateX(330px);
 }
 
+/* .ball6Dark {
+  background-color: rgba(233, 233, 240, 0.601);
+  transform: rotate(368deg) translateX(330px);
+}
+
+.ball7Dark {
+  background-color: rgba(233, 233, 240, 0.601);
+  transform: rotate(288deg) translateX(330px);
+} */
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
