--- a/components/error404/Error404.module.css
+++ b/components/error404/Error404.module.css
@@ -1,10 +1,11 @@
 /* Error404.css */
 .container {
+
     text-align: center;
     padding: 10px;
     height: 750px;
     margin-bottom: 170px;
-  }
+}
   
   .image {
     position: relative;
@@ -67,8 +68,57 @@
     left: calc(50% - 610px); 
   }
   
+  /* Pantallas entre 769px y 1024px (pantallas divididas o tablets) */
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .container {
+      margin-bottom: -100px;
+    }
+    .image {
+      width: 100%; 
+      height: auto; 
+    }
+    .message {
+      width: 80%; 
+      top: calc(50% + -700px); 
+      left: calc(50% - 360px);
+    }
+    .redirectButton {
+      top: calc(50% + -680px); 
+      left: calc(50% - 260px);
+    }
+    .postImage1 {
+      width: 32%; 
+      top: calc(50% - 910px); 
+      left: calc(50% - -70px);
+    }
+    .postImage2 {
+        width: 32%; 
+        top: calc(50% - 1200px); 
+        left: calc(50% - -240px);
+    }
+    .lineaVertical1 {
+      background-color: white; 
+      width: 2px; 
+      height: 195px; 
+      position: relative; 
+      top: calc(50% - 1525px); 
+      left: calc(50% - 370px); 
+    }
+    .lineaVertical2 {
+      background-color: blue;
+      width: 2px; 
+      height: 195px; 
+      position: relative; 
+      top: calc(50% - 1525px); 
+      left: calc(50% - 370px); 
+    }
+  }
   
   @media (max-width: 768px) {
+
+    .container {
+      margin-bottom: -150px;
+    }
     .image {
       width: 100%; 
       height: auto; 
@@ -91,6 +141,22 @@
         width: 32%; 
         top: calc(50% - 970px); 
         left: calc(50% - -165px);
+    }
+    .lineaVertical1 {
+      background-color: white; 
+      width: 2px; 
+      height: 195px; 
+      position: relative; 
+      top: calc(50% - 1200px); 
+      left: calc(50% - 280px); 
+    }
+    .lineaVertical2 {
+      background-color: blue;
+      width: 2px; 
+      height: 195px; 
+      position: relative; 
+      top: calc(50% - 1200px); 
+      left: calc(50% - 280px);
     }
   }
   
