--- a/components/error404/Error404.module.css
+++ b/components/error404/Error404.module.css
@@ -1,14 +1,15 @@
 /* error404.css */
+@media (max-width: 2560px) {
 .container {
   text-align: center;
   padding: 10px;
-  height: 750px;
-  margin-bottom: 170px;
+  height: 790px;
+  margin: auto;
 }
 
 .image {
   position: relative;
-  top: calc(50% - 155px);
+  top: calc(50% - 195px);
   left: calc(50% - 30px);
   transform: translate(-50%, -50%);
   width: 1800px;
@@ -20,13 +21,13 @@
   width: 310px;
   padding: 10px;
   text-align: left;
-  top: calc(50% + -495px);
+  top: calc(50% + -535px);
   left: calc(50% - 590px);
 }
 
 .redirectButton {
   position: relative;
-  top: calc(50% + -475px);
+  top: calc(50% + -520px);
   left: calc(50% - 495px);
   transform: translate(-50%, -50%);
   border-radius: 35px;
@@ -40,81 +41,121 @@
   position: relative;
   transform: translate(-50%, -50%);
   width: 600px;
-  top: calc(50% - 750px);
+  top: calc(50% - 790px);
   left: calc(50% - -220px);
 }
 .postImage2 {
   position: relative;
   transform: translate(-50%, -50%);
   width: 415px;
-  top: calc(50% - 1130px);
+  top: calc(50% - 1180px);
   left: calc(50% - -460px);
 }
 .lineaVertical1 {
   background-color: white;
   width: 2px;
-  height: 195px;
+  height: 175px;
   position: relative;
-  top: calc(50% - 1555px);
+  top: calc(50% - 1595px);
   left: calc(50% - 610px);
 }
 .lineaVertical2 {
   background-color: blue;
   width: 2px;
-  height: 195px;
+  height: 175px;
   position: relative;
-  top: calc(50% - 1555px);
+  top: calc(50% - 1595px);
   left: calc(50% - 610px);
 }
+.enchufe{
+  width: 1700px;
+  position: relative;
+  top: calc(50% - 1670px);
+  left: calc(50% - 1100px);
+  
+}
+} 
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .container {
-    margin-bottom: -100px;
+    text-align: center;
+    padding: 10px;
+    height: 650px;
+    background-color: blue;
+    margin: auto;
   }
+  
   .image {
-    width: 100%;
-    height: auto;
+    position: relative;
+    top: calc(50% - 100px);
+    left: calc(50% - 30px);
+    transform: translate(-50%, -50%);
+    width: 1100px;
+    height: 680px;
   }
+  
   .message {
-    width: 80%;
+    position: relative;
+    width: 310px;
+    padding: 10px;
+    text-align: left;
     top: calc(50% + -700px);
-    left: calc(50% - 360px);
+    left: calc(50% - 375px);
   }
+  
   .redirectButton {
+    position: relative;
     top: calc(50% + -680px);
-    left: calc(50% - 260px);
+    left: calc(50% - 280px);
+    transform: translate(-50%, -50%);
+    border-radius: 35px;
+    width: 180px;
+    height: 75px;
+    padding: 20px;
+    text-align: center;
   }
+  
   .postImage1 {
-    width: 32%;
-    top: calc(50% - 910px);
-    left: calc(50% - -70px);
+    position: relative;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    top: calc(50% - 930px);
+    left: calc(50% - -60px);
   }
   .postImage2 {
-    width: 32%;
-    top: calc(50% - 1200px);
-    left: calc(50% - -240px);
+    position: relative;
+    transform: translate(-50%, -50%);
+    width: 305px;
+    top: calc(50% - 1190px);
+    left: calc(50% - -265px);
   }
   .lineaVertical1 {
     background-color: white;
     width: 2px;
-    height: 195px;
+    height: 185px;
     position: relative;
-    top: calc(50% - 1525px);
-    left: calc(50% - 370px);
+    top: calc(50% - 1500px);
+    left: calc(50% - 380px);
   }
   .lineaVertical2 {
     background-color: blue;
     width: 2px;
-    height: 195px;
+    height: 185px;
     position: relative;
-    top: calc(50% - 1525px);
-    left: calc(50% - 370px);
+    top: calc(50% - 1500px);
+    left: calc(50% - 380px);
   }
-}
+  .enchufe{
+    width: 1700px;
+    position: relative;
+    top: calc(50% - 1550px);
+    left: calc(50% - 1100px);
+  }
+} 
 
 @media (max-width: 768px) {
   .container {
-    margin-bottom: -150px;
+    margin-bottom: 700px;
   }
   .image {
     width: 100%;
@@ -155,4 +196,4 @@
     top: calc(50% - 1200px);
     left: calc(50% - 280px);
   }
-}
+} 
