--- a/components/error404/Error404.module.css
+++ b/components/error404/Error404.module.css
@@ -1,9 +1,10 @@
 /* error404.css */
-@media (max-width: 2560px) {
+@media (max-width: 7680px) {
 .container {
   text-align: center;
   padding: 10px;
   height: 790px;
+  margin-bottom: 120px;
 }
 
 .image {
@@ -54,7 +55,7 @@
 }
 .lineaVertical1 {
   background-color: white;
-  width: 20px;
+  width: 3px;
   height: 190px;
   position: relative;
   top: calc(50% - 1630px);
@@ -62,8 +63,8 @@
   border-radius: 12px;
 }
 .lineaVertical2 {
-  background-color: blue;
-  width: 20px;
+  background: rgb(35, 35, 160);
+  width: 3px;
   height: 190px;
   position: relative;
   top: calc(50% - 1630px);
@@ -82,7 +83,6 @@
   position: relative;
   top: calc(50% - 1670px);
   left: calc(50% - 1100px);
-  
 }
 } 
 
@@ -140,15 +140,15 @@
   }
   .lineaVertical1 {
     background-color: white;
-    width: 20px;
+    width: 3px;
     height: 200px;
     position: relative;
     top: calc(50% - 1530px);
     left: calc(50% - 395px);
   }
   .lineaVertical2 {
-    background-color: blue;
-    width: 20px;
+    background: rgb(35, 35, 160);
+    width: 3px;
     height: 200px;
     position: relative;
     top: calc(50% - 1530px);
@@ -219,7 +219,7 @@
   }
   .lineaVertical1 {
     background-color: white;
-    width: 20px;
+    width: 3px;
     height: 165px;
     position: relative;
     top: calc(50% - 975px);
@@ -227,8 +227,8 @@
     border-radius: 12px;
   }
   .lineaVertical2 {
-    background-color: blue;
-    width: 20px;
+    background: rgb(35, 35, 160);
+    width: 3px;
     height: 165px;
     position: relative;
     top: calc(50% - 975px);
@@ -285,6 +285,7 @@
     height: 300px;
     position: relative; 
     margin-top: 180px;
+    margin-bottom: -50px;
   }
 
   .image_tlf {
@@ -327,7 +328,7 @@
 
   .tlf_lineaVertical1{
     background-color: white;
-    width: 8px;
+    width: 2px;
     height: 110px;
     display: block; 
     position: absolute;
@@ -337,8 +338,8 @@
   }
 
   .tlf_lineaVertical2{
-    background-color: blue;
-    width: 8px;
+    background: rgb(35, 35, 160);
+    width: 2px;
     height: 110px;
     display: block; 
     position: absolute;
